--- a/_resources/scss/layout/_header.scss
+++ b/_resources/scss/layout/_header.scss
@@ -10,7 +10,7 @@
 	&__video {
 		width: 100%; 
 		object-fit: fill;
-		filter: opacity(90%) blur(15px);
+		filter: opacity(100%) blur(5px);
 		height: 100vh;
 		z-index: 0;
 
