--- a/_resources/scss/layout/_skills.scss
+++ b/_resources/scss/layout/_skills.scss
@@ -17,20 +17,21 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 		min-height: 80vh;
-
 		&__title {
-			color: $medium-black;
+			color: white;
 			width: 100%;
-			text-align: center;
-			font-size: 2em; 
-			text-decoration: underline;
+			font-family: $open-sans;
+			// text-align: center;
+			font-size: 3em; 
+			// text-decoration: underline;
 		}
 		&__parallax {
 			// max-height: 80vh;	
-			padding: 100px 50px;
+			padding: 100px 10%;
+			// padding: 100px 50px;
 			width: 100%;
 			display: flex;
-			justify-content: space-around;
+			justify-content: space-between;
 			align-content: center;
 			align-items: center;
 			flex-wrap: wrap;
@@ -38,7 +39,7 @@
 	}
 
 	&__title {
-		text-align: center;
+		// text-align: center;
 		padding: 15px 0 20px 0;
 		color: $medium-black;
 		font-size: 1.5em;
